fix bug no código do alt da inserção da imagem

--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@ else if (paragraph.startsWith('(img)')) {
     
     // Parágrafo com imagem centralizada
     htmlOutput += `<p style="text-align: center;">\n`;
-    htmlOutput += `<img src="https://placehold.co/500x300/crimson/black?text=${imgSrc || ''}" alt="Descrição abaixo da imagem."}">\n`;
+    htmlOutput += `<img src="https://placehold.co/500x300/crimson/black?text=${imgSrc || ''}" alt="Descrição abaixo da imagem.">\n`;
     htmlOutput += `</p>\n`;
 
     // Parágrafo com número da figura e fonte
