--- a/index.html
+++ b/index.html
@@ -173,12 +173,14 @@
                             <span class="tooltiptext">Ctrl + 4</span>
                         </button>
                         <button id="copyH5Button" class="tooltip">H5
-                            <span class="tooltiptext">Ctrl + 4</span>
+                            <span class="tooltiptext">Ctrl + 5</span>
                         </button>
                         <button id="copyImgButton" class="tooltip">Imagem
                             <span class="tooltiptext">Ctrl + I</span>
                         </button>
-                        <button id="copyLoremButton">Lorem</button>
+                        <button id="copyTableButton" class="tooltip">Tabela
+                            <span class="tooltiptext">Ctrl + B</span>
+                        </button>
                     </div>
                     <div class="buttons__functions__copy">
                         <button id="copyTextButton">COPIAR TEXTO</button>
@@ -396,8 +398,8 @@ function processarParagrafos(paragraphs) {
         });
 
         // Add event listener for the new Lorem button
-        document.getElementById('copyLoremButton').addEventListener('click', () => {
-            copyToClipboard('Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minus quam dolorum magni magnam, iure consequatur!');
+        document.getElementById('copyTableButton').addEventListener('click', () => {
+            copyToClipboard('(table)\n(th)Ponto e vírgula separa células;(th)Use o pipe para nova linha;(th)Para mesclar na vertical use (rowspan=2)|\n:Para mesclar na horizontal use (colspan=2)|\n:Dois pontos centraliza;:Pode usar **negrito** e *itálico*(colspan=2)\n(table)');
         });
 
 
@@ -476,6 +478,11 @@ function processarParagrafos(paragraphs) {
                 event.preventDefault(); // Evita o comportamento padrão
                 insertTextAtCursor('(img) NºFOTO | LEGENDA | FONTE | DESCRIÇÃO'); // Insere imagem
             }
+
+            if (event.ctrlKey && event.key.toLowerCase() === 'b') {
+                event.preventDefault(); // Evita o comportamento padrão
+                insertTextAtCursor('(table)\n(th)Ponto e vírgula separa células;(th)Use o pipe para nova linha;(th)Para mesclar na vertical use (rowspan=2)|\n:Para mesclar na horizontal use (colspan=2)|\n:Dois pontos centraliza;:Pode usar **negrito** e *itálico*(colspan=2)\n(table)');
+            }
         });
 
 
@@ -503,31 +510,37 @@ function processarParagrafos(paragraphs) {
         function parseCell(cell) {
             let rowspanMatch = cell.match(/\(rowspan=(\d+)\)/);
             let colspanMatch = cell.match(/\(colspan=(\d+)\)/);
+            let thMatch = cell.match(/\(th\)/);
 
             let rowspan = rowspanMatch ? parseInt(rowspanMatch[1]) : 1;
             let colspan = colspanMatch ? parseInt(colspanMatch[1]) : 1;
+            let isHeader = thMatch ? true : false;
 
-            cell = cell.replace(/\(rowspan=\d+\)/, "").replace(/\(colspan=\d+\)/, "").trim();
+            cell = cell
+                .replace(/\(rowspan=\d+\)/, "")
+                .replace(/\(colspan=\d+\)/, "")
+                .replace(/\(th\)/, "")
+                .trim();
 
             let alignCenter = cell.startsWith(':');
             if (alignCenter) {
                 cell = cell.slice(1).trim();
             }
 
-            return { cell, rowspan, colspan, alignCenter };
+            return { cell, rowspan, colspan, alignCenter, isHeader };
         }
 
         function textToHtmlTable(text, columnSeparator = ";", rowSeparator = "|") {
-            const rows = text.split(rowSeparator);
+            const rows = text.split(rowSeparator).map(row => row.trim());
             let html = "<table border='1' align='center'>\n";
             let table = [];
 
             rows.forEach((row, rowIndex) => {
-                let cells = row.split(columnSeparator);
+                let cells = row.split(columnSeparator).map(cell => cell.trim());
                 table[rowIndex] = table[rowIndex] || [];
 
                 cells.forEach((cell, colIndex) => {
-                    let { cell: cellContent, rowspan, colspan, alignCenter } = parseCell(cell);
+                    let { cell: cellContent, rowspan, colspan, alignCenter, isHeader } = parseCell(cell);
 
                     if (rowspan > 1) {
                         for (let i = 0; i < rowspan; i++) {
@@ -537,7 +550,8 @@ function processarParagrafos(paragraphs) {
                                 rowspan: rowspan,
                                 colspan: colspan,
                                 merged: i > 0,
-                                alignCenter
+                                alignCenter,
+                                isHeader
                             };
                         }
                     } else {
@@ -547,7 +561,8 @@ function processarParagrafos(paragraphs) {
                                 rowspan: rowspan,
                                 colspan: colspan,
                                 merged: false,
-                                alignCenter
+                                alignCenter,
+                                isHeader
                             };
                         }
                     }
@@ -558,8 +573,9 @@ function processarParagrafos(paragraphs) {
                 html += "  <tr>\n";
                 row.forEach(cell => {
                     if (cell && !cell.merged) {
+                        let tag = cell.isHeader ? 'th' : 'td';
                         let style = cell.alignCenter ? ' style="text-align: center;"' : '';
-                        html += `    <td${style}${cell.rowspan > 1 ? ` rowspan="${cell.rowspan}"` : ""}${cell.colspan > 1 ? ` colspan="${cell.colspan}"` : ""}>${cell.content}</td>\n`;
+                        html += `    <${tag}${style}${cell.rowspan > 1 ? ` rowspan="${cell.rowspan}"` : ""}${cell.colspan > 1 ? ` colspan="${cell.colspan}"` : ""}>${convertMarkdownToHtml(cell.content)}</${tag}>\n`;
                     }
                 });
                 html += "  </tr>\n";
