--- a/index.html
+++ b/index.html
@@ -159,27 +159,30 @@
                 <div class="buttons__functions">
                     <div class="buttons__functions__tags">
                         <button id="copyPButton" class="tooltip">Parágrafo
-                            <span class="tooltiptext">Ctrl + S</span>
+                            <span class="tooltiptext">Alt + S</span>
                         </button>
                         <button id="copyUlButton" class="tooltip">UL
-                            <span class="tooltiptext">Ctrl + D</span>
+                            <span class="tooltiptext">Alt + D</span>
                         </button>
                         <button id="copyOlButton">OL</button>
                         <button id="copyBoldButton" class="tooltip">Negrito
-                            <span class="tooltiptext">Ctrl + X</span>
+                            <span class="tooltiptext">Alt + X</span>
                         </button>
                         <button id="copyItalicButton" class="tooltip">Itálico</button>
                         <button id="copyH4Button" class="tooltip">H4
-                            <span class="tooltiptext">Ctrl + 4</span>
+                            <span class="tooltiptext">Alt + 4</span>
                         </button>
                         <button id="copyH5Button" class="tooltip">H5
-                            <span class="tooltiptext">Ctrl + 5</span>
+                            <span class="tooltiptext">Alt + 5</span>
                         </button>
                         <button id="copyImgButton" class="tooltip">Imagem
-                            <span class="tooltiptext">Ctrl + I</span>
+                            <span class="tooltiptext">Alt + I</span>
                         </button>
                         <button id="copyTableButton" class="tooltip">Tabela
-                            <span class="tooltiptext">Ctrl + B</span>
+                            <span class="tooltiptext">Alt + B</span>
+                        </button>
+                        <button id="copyExampleButton" class="tooltip">Exemplos
+                            <span class="tooltiptext">Alt + 0</span>
                         </button>
                     </div>
                     <div class="buttons__functions__copy">
@@ -211,6 +214,9 @@
             // Convert markdown for bold (**) and italic (* or _)
             text = text.replace(/\*\*(.*?)\*\*/g, '<strong>$1</strong>'); // Negrito com **
             text = text.replace(/\*(.*?)\*/g, '<em>$1</em>'); // Itálico com *
+
+            text = text.replace(/\(br\)/g, '<br>\n');
+
             return text;
         }
 
@@ -265,8 +271,8 @@
 
 
         // ::: PROCESSA OS PARÁGRAFOS ::: 
-function processarParagrafos(paragraphs) {
-    paragraphs.forEach(paragraph => {
+        function processarParagrafos(paragraphs) {
+        paragraphs.forEach(paragraph => {
 
         // Se for uma tag <pre>, pula a remoção de espaços
         if (paragraph.startsWith('(pre)')) {
@@ -349,6 +355,14 @@ function processarParagrafos(paragraphs) {
                 return `<h${level}>${match[2].trim()}</h${level}>`;
             }
 
+            // if (text.startsWith('(pbr)')) {
+            //     // Remove o marcador (pbr) sem remover espaços
+            //     const hrContent = text.replace('(pbr)', '').trim();
+                
+            //     // Insere sa tags <p><br></p>
+            //     htmlOutput += `<p><br></p>\n`;
+            // }
+
             // Se não for título, retorna o texto original
             return `<p>${convertMarkdownToHtml(text)}</p>`;
         }
@@ -411,9 +425,14 @@ function processarParagrafos(paragraphs) {
             copyToClipboard('(img) NºFOTO | LEGENDA | FONTE | DESCRIÇÃO');
         });
 
-        // Add event listener for the new Lorem button
+        // Add event listener for the new Table button
         document.getElementById('copyTableButton').addEventListener('click', () => {
             copyToClipboard('(table)\n(th)Ponto e vírgula separa células;(th)Use o pipe para nova linha;(th)Para mesclar na vertical use (rowspan=2)|\n:Para mesclar na horizontal use (colspan=2)|\n:Dois pontos centraliza;:Pode usar **negrito** e *itálico*(colspan=2)\n(table)');
+        });
+
+        // Event Listener para o botão Exemplo
+        document.getElementById('copyExampleButton').addEventListener('click', () => {
+            copyToClipboard('Exemplo de texto');
         });
 
 
@@ -463,39 +482,64 @@ function processarParagrafos(paragraphs) {
 
         // Definições das teclas de atalho
         textarea.addEventListener('keydown', function(event) {
-            if (event.ctrlKey && event.key.toLowerCase() === 's') {
-                event.preventDefault(); // Evita o comportamento padrão
+            if (event.altKey && event.key.toLowerCase() === 's') {
+                // event.preventDefault(); // Evita o comportamento padrão
                 insertTextAtCursor('(p)'); // Insere o texto "(p)"
             }
             
-            if (event.ctrlKey && event.key.toLowerCase() === 'd') {
+            if (event.altKey && event.key.toLowerCase() === 'd') {
                 event.preventDefault(); // Evita o comportamento padrão
                 insertTextAtCursor('(ul)'); // Insere o texto "(ul)"
             }
 
-            if (event.ctrlKey && event.key.toLowerCase() === 'x') {
-                event.preventDefault(); // Evita o comportamento padrão
+            if (event.altKey && event.key.toLowerCase() === 'x') {
+                // event.preventDefault(); // Evita o comportamento padrão
                 insertTextAtCursor('**'); // Insere o texto "**"
             }
 
-            if (event.ctrlKey && event.key.toLowerCase() === '4') {
-                event.preventDefault(); // Evita o comportamento padrão
+            if (event.altKey && event.key.toLowerCase() === '1') {
+                // event.preventDefault(); // Evita o comportamento padrão
+                insertTextAtCursor(' # '); // Insere o texto " #### "
+            }
+
+            if (event.altKey && event.key.toLowerCase() === '2') {
+                // event.preventDefault(); // Evita o comportamento padrão
+                insertTextAtCursor(' ## '); // Insere o texto " #### "
+            }
+
+            if (event.altKey && event.key.toLowerCase() === '3') {
+                // event.preventDefault(); // Evita o comportamento padrão
+                insertTextAtCursor(' ### '); // Insere o texto " #### "
+            }
+
+            if (event.altKey && event.key.toLowerCase() === '4') {
+                // event.preventDefault(); // Evita o comportamento padrão
                 insertTextAtCursor(' #### '); // Insere o texto " #### "
             }
 
-            if (event.ctrlKey && event.key.toLowerCase() === '5') {
-                event.preventDefault(); // Evita o comportamento padrão
+            if (event.altKey && event.key.toLowerCase() === '5') {
+                // event.preventDefault(); // Evita o comportamento padrão
                 insertTextAtCursor(' ##### '); // Insere o texto " ##### "
             }
 
-            if (event.ctrlKey && event.key.toLowerCase() === 'i') {
-                event.preventDefault(); // Evita o comportamento padrão
+            if (event.altKey && event.key.toLowerCase() === '6') {
+                // event.preventDefault(); // Evita o comportamento padrão
+                insertTextAtCursor(' ###### '); // Insere o texto " ##### "
+            }
+
+            if (event.altKey && event.key.toLowerCase() === 'i') {
+                // event.preventDefault(); // Evita o comportamento padrão
                 insertTextAtCursor('(img) NºFOTO | LEGENDA | FONTE | DESCRIÇÃO'); // Insere imagem
             }
 
-            if (event.ctrlKey && event.key.toLowerCase() === 'b') {
-                event.preventDefault(); // Evita o comportamento padrão
+            if (event.altKey && event.key.toLowerCase() === 'b') {
+                // event.preventDefault(); // Evita o comportamento padrão
                 insertTextAtCursor('(table)\n(th)Ponto e vírgula separa células;(th)Use o pipe para nova linha;(th)Para mesclar na vertical use (rowspan=2)|\n:Para mesclar na horizontal use (colspan=2)|\n:Dois pontos centraliza;:Pode usar **negrito** e *itálico*(colspan=2)\n(table)');
+            }
+
+            if (event.altKey && event.key.toLowerCase() === '0') {
+                // event.preventDefault(); // Evita o comportamento padrão
+                insertTextAtCursor('Exemplo de texto');
             }
         });
 
@@ -595,7 +639,9 @@ function processarParagrafos(paragraphs) {
                 html += "  </tr>\n";
             });
 
-            html += "</table>";
+            html += "</table>\n";
+            html += "<p><br></p>";
+
             return html;
         }
 
