--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
         code {
             font-family: monospace;
             display: inline-block;
-            padding: 15px;
-            margin: 0 0 0 30px;
-            background-color: lightblue;
+            padding: 8px;
+            margin-left: 30px;
+            background-color: khaki;
             border-radius: 0px;
         }
         .margin {
