--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
 
         // Destacar palavras e letras "proibidas"
         const palavrasProibidas = ['alunos', 'aluno', 'aluna', 'alunas', '\\?'];
-        const unidadesMedida = ['ºC', 'kg', 'mm', 'km', 'L', 'ml', 'm'];
+        const unidadesMedida = ['ºC', 'kg', 'm2', 'mm', 'km', 'L', 'ml', 'm', 'g'];
 
 
         function destacarPalavras(texto) {
