Revert texto no html está aparecendo quebrado "fix bugzinhos"
This reverts commit ddb8624cc66d0b419e2d356758d18079c62f397a.

--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
 
         // Destacar palavras e letras "proibidas"
         const palavrasProibidas = ['alunos', 'aluno', 'aluna', 'alunas', '\\?'];
-        const unidadesMedida = ['ºC', 'kg', 'm2', 'mm', 'km', 'L', 'ml', 'm', 'g'];
+        const unidadesMedida = ['ºC', 'kg', 'mm', 'km', 'L', 'ml', 'm'];
 
 
         function destacarPalavras(texto) {
