fix sinal de graus junto de número e longe da unidade (3,7º C)

--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
 
         // Destacar palavras e letras "proibidas"
         const palavrasProibidas = ['alunos', 'aluno', 'aluna', 'alunas', '\\?'];
-        const unidadesMedida = ['ºC', 'kg', 'm2', 'mm', 'km', 'L', 'ml', 'm', 'g'];
+        const unidadesMedida = ['ºC', 'kg', 'm2', 'mm', 'km', 'L', 'ml', 'm', 'g', 'º'];
 
 
         function destacarPalavras(texto) {
